first drop of dev-pipeline

--- a/pipelines/tasks/appsody-build-task.yaml
+++ b/pipelines/tasks/appsody-build-task.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   inputs:
     resources:
-      - name: appsody-source
+      - name: git-source
         type: git
     params:
       - name: pathToDockerFile
@@ -19,15 +19,23 @@ spec:
         type: image
   steps:
     - name: assemble-extract-step
+      securityContext:
+        privileged: true
       image: appsody/appsody-docker
       command: ["/bin/bash"]
       args:
         - -c
         - "/setupAndRunExtract.sh"
+      env:
+        - name: gitsource
+          value: git-source
       volumeMounts:
         - name: docker-socket
           mountPath: /var/run/docker.sock
     - name: build-push-step
+      env:
+      - name: DOCKER_CONFIG
+        value: /builder/home/.docker
       image: gcr.io/kaniko-project/executor
       command:
         - /kaniko/executor
@@ -35,10 +43,11 @@ spec:
         - --dockerfile=${inputs.params.pathToDockerFile}
         - --destination=${outputs.resources.docker-image.url}
         - --context=${inputs.params.pathToContext}
+        - --skip-tls-verify
     - name: modify-yaml
       image: ubuntu
       command: ['/bin/bash']
-      args: ['-c', 'find /workspace/appsody-source -name ${YAMLFILE} -type f -exec sed -i -e s!"image: .*$"!"image: ${IMG}"!g {} \;']
+      args: ['-c', 'find /workspace/git-source -name ${YAMLFILE} -type f -exec sed -i -e s!"image: .*$"!"image: ${IMG}"!g {} \;']
       env:
         - name: IMG
           value: ${outputs.resources.docker-image.url}
@@ -47,16 +56,10 @@ spec:
     - name: install-knative
       image: lachlanevenson/k8s-kubectl
       command: ['/bin/sh']
-      args: ['-c', 'find /workspace/appsody-source -name ${YAMLFILE} -type f|xargs kubectl apply -f']
+      args: ['-c', 'find /workspace/git-source -name ${YAMLFILE} -type f|xargs kubectl apply -f']
       env:
         - name: YAMLFILE
           value: ${inputs.params.appsody-deploy-file-name}
-#    - name: install-helm
-#      image: ibmcom/microclimate-k8s-helm:v2.9.1 
-#      command: ['helm']
-#      args:
-#      - 'install'
-#      - '/workspace/extracted/config/chart'
   volumes:
     - name: docker-socket
       hostPath:
