code review updates

--- a/pipelines/dev-pipeline/dev-pipeline-resources.yaml
+++ b/pipelines/dev-pipeline/dev-pipeline-resources.yaml
@@ -12,7 +12,7 @@ items:
 - apiVersion: tekton.dev/v1alpha1
   kind: PipelineResource
   metadata:
-    name: appsody-source
+    name: git-source
   spec:
     params:
     - name: revision
