--- a/pipelines/dev-pipeline/dev-pipeline-run.yaml
+++ b/pipelines/dev-pipeline/dev-pipeline-run.yaml
@@ -3,7 +3,7 @@ kind: PipelineRun
 metadata:
   name: dev-manual-pipeline-run
 spec:
-  serviceAccount: appsody-sa
+  serviceAccount: kabanero-sa
   timeout: "1h0m0s"
   pipelineRef:
     name: dev-pipeline
