--- a/pipelines/dev-pipeline/pv.yaml
+++ b/pipelines/dev-pipeline/pv.yaml
@@ -1,7 +1,7 @@
-ipiVersion: v1
+apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: appsody-manual-pipeline-run-pvc
+  name: dev-manual-pipeline-run-pvc
 spec:
   capacity:
     storage: 5Gi
@@ -9,5 +9,5 @@ spec:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Recycle
   hostPath:
-    path: /var/lib/appsody-manual-pipeline-run-pvc
+    path: /var/lib/dev-manual-pipeline-run-pvc
 
