--- a/pipelines/dev-pipeline/dev-pipeline.yaml
+++ b/pipelines/dev-pipeline/dev-pipeline.yaml
@@ -1,10 +1,10 @@
-apiVersion: 0.1
+apiVersion: tekton.dev/v1alpha1
 kind: Pipeline
 metadata:
-  name: build-pipeline
+  name: dev-pipeline
 spec:
   resources:
-    - name: appsody-source
+    - name: git-source
       type: git
     - name: docker-image
       type: image
@@ -14,8 +14,8 @@ spec:
         name: appsody-build-task
       resources:
         inputs:
-        - name: appsody-source
-          resource: appsody-source
+        - name: git-source
+          resource: git-source
         outputs:
         - name: docker-image
           resource: docker-image
