--- a/pipelines/common/cluster-role-binding.yaml
+++ b/pipelines/common/cluster-role-binding.yaml
@@ -5,7 +5,7 @@ metadata:
 subjects:
 - kind: ServiceAccount
   name: kabanero-sa
-  namespace: default
+  namespace: kabanero
 roleRef:
   kind: ClusterRole
   name: cluster-admin
