--- a/pipelines/nodejs-pipelines/nodejs-build-deploy-pipeline.yaml
+++ b/pipelines/nodejs-pipelines/nodejs-build-deploy-pipeline.yaml
@@ -1,7 +1,7 @@
 apiVersion: tekton.dev/v1alpha1
 kind: Pipeline
 metadata:
-  name: nodejs-build-pipeline
+  name: nodejs-build-deploy-pipeline
 spec:
   resources:
     - name: git-source
@@ -9,9 +9,9 @@ spec:
     - name: docker-image
       type: image
   tasks:
-    - name: appsody-build
+    - name: build-task
       taskRef:
-        name: nodejs-appsody-build-task
+        name: nodejs-build-task
       resources:
         inputs:
         - name: git-source
@@ -19,6 +19,13 @@ spec:
         outputs:
         - name: docker-image
           resource: docker-image
-      params:
-      - name: appsody-deploy-file-name
-        value: appsody-service.yaml
+    - name: deploy-task
+      taskRef:
+        name: nodejs-deploy-task
+      runAfter: [build-task]
+      resources:
+        inputs:
+        - name: git-source
+          resource: git-source
+        - name: docker-image
+          resource: docker-image
