--- a/pipelines/common/pv.yaml
+++ b/pipelines/common/pv.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: dev-manual-pipeline-run-pvc
+  name: manual-pipeline-run-pvc
 spec:
   capacity:
     storage: 5Gi
@@ -9,5 +9,4 @@ spec:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Recycle
   hostPath:
-    path: /var/lib/dev-manual-pipeline-run-pvc
-
+    path: /var/lib/manual-pipeline-run-pvc
