--- a/pipelines/incubator/manual-pipeline-runs/pipeline-runs/java-spring-boot2-pipeline-run.yaml
+++ b/pipelines/incubator/manual-pipeline-runs/pipeline-runs/java-spring-boot2-pipeline-run.yaml
@@ -3,7 +3,7 @@ kind: PipelineRun
 metadata:
   name: java-spring-boot2-manual-pipeline-run
 spec:
-  serviceAccount: kabanero-sa
+  serviceAccount: kabanero-operator
   timeout: "1h0m0s"
   pipelineRef:
     name: java-spring-boot2-build-deploy-pipeline 
