aadeshpa issue 40 updated pipeline and task files
After discussion with Kyle with his fix for the substituon of the collection name, we chnaged the ${collection-name} to 'CollectionId' in all pipeline and task files.
Reference PR of kyle : https://github.com/kabanero-io/kabanero-operator/pull/161

--- a/pipelines/incubator/java-microprofile-pipelines/deploy-task.yaml
+++ b/pipelines/incubator/java-microprofile-pipelines/deploy-task.yaml
@@ -1,7 +1,8 @@
+#Kabanero! on activate substitute CollectionId for text 'CollectionId'
 apiVersion: tekton.dev/v1alpha1
 kind: Task
 metadata:
-  name: java-microprofile-deploy-task
+  name: CollectionId-deploy-task
 spec:
   inputs:
     resources:
@@ -11,7 +12,7 @@ spec:
         type: image
     params:
       - name: repository-name
-        default: java-microprofile
+        default: CollectionId
       - name: app-deploy-file-name
         default: app-deploy.yaml
   steps:
