--- a/pipelines/common/docker-secret-template.yaml
+++ b/pipelines/common/docker-secret-template.yaml
@@ -6,5 +6,5 @@ metadata:
     tekton.dev/docker-0: https://index.docker.io/v1/
 type: kubernetes.io/basic-auth
 stringData:
-  username: <your-docker-hub-username>
-  password: <my-pwd>
+  username: <docker-repo-username>
+  password: <docker-repo-password>
