--- a/pipelines/incubator/manual-pipeline-runs/image-retag-push-pipeline-resources-template.yaml
+++ b/pipelines/incubator/manual-pipeline-runs/image-retag-push-pipeline-resources-template.yaml
@@ -3,7 +3,7 @@ items:
 - apiVersion: tekton.dev/v1alpha1
   kind: PipelineResource
   metadata:
-    name: docker-image
+    name: docker-src-image
   spec:
     params:
     - name: url
