removed trigger manual and updated indentation

--- a/pipelines/incubator/manual-pipeline-runs/manual-build-only-pipeline-run-template.yaml
+++ b/pipelines/incubator/manual-pipeline-runs/manual-build-only-pipeline-run-template.yaml
@@ -7,9 +7,6 @@ spec:
   timeout: "1h0m0s"
   pipelineRef:
     name: <collection-name>-build-only-pipeline
-  trigger:
-    type: manual
   resources:
     - name: git-source
-      resourceRef:
-name: git-source
+      resourceRef: name: git-source
