--- a/pipelines/incubator/build-push-deploy-pipeline.yaml
+++ b/pipelines/incubator/build-push-deploy-pipeline.yaml
@@ -2,7 +2,7 @@
 apiVersion: tekton.dev/v1alpha1
 kind: Pipeline
 metadata:
-  name: CollectionId-build-deploy-pipeline
+  name: CollectionId-build-push-deploy-pipeline
 spec:
   params:
   - name: event-headers
@@ -24,10 +24,20 @@ spec:
       outputs:
       - name: docker-image
         resource: docker-image
+  - name: image-scan-task
+    taskRef:
+      name: image-scan-task
+    runAfter: [build-push-task]
+    resources:
+      inputs:
+      - name: git-source
+        resource: git-source
+      - name: docker-image
+        resource: docker-image  
   - name: deploy-task
     taskRef:
       name: CollectionId-deploy-task
-    runAfter: [build-task]
+    runAfter: [build-push-task]
     resources:
       inputs:
       - name: git-source
