--- a/pipelines/incubator/manual-pipeline-runs/manual-build-pipeline-run-template.yaml
+++ b/pipelines/incubator/manual-pipeline-runs/manual-build-pipeline-run-template.yaml
@@ -1,12 +1,12 @@
 apiVersion: tekton.dev/v1alpha1
 kind: PipelineRun
 metadata:
-  name: <collection-name>-build-only-manual-pipeline-run
+  name: <collection-name>-build-manual-pipeline-run
 spec:
   serviceAccount: kabanero-operator
   timeout: "1h0m0s"
   pipelineRef:
-    name: <collection-name>-build-only-pipeline
+    name: <collection-name>-build-pipeline
   resources:
     - name: git-source
       resourceRef:
