--- a/pipelines/incubator/image-scan-task.yaml
+++ b/pipelines/incubator/image-scan-task.yaml
@@ -3,7 +3,7 @@
 apiVersion: tekton.dev/v1alpha1
 kind: Task
 metadata:
-  name: scan-task
+  name: image-scan-task
 spec:
   inputs:
     resources:
@@ -41,22 +41,16 @@ spec:
         privileged: true
       image: kabanero/scanner
       command: ['/bin/bash']
-      args: ['-c', 'mkdir -p /workspace/scans/$(inputs.params.scansDir)/$(inputs.resources.docker-image.url)/$(cat /var/lib/containers/imageid.txt); echo "Scanning copy of image $(inputs.resources.docker-image.url) with image ID $(cat /var/lib/containers/imageid.txt) in /var/lib/containers/merged"; cd /var/lib/containers/merged; ls -la; $(inputs.params.command) /var/lib/containers/merged oval eval --results /workspace/scans/$(inputs.params.scansDir)/$(inputs.resources.docker-image.url)/$(cat /var/lib/containers/imageid.txt)/results.xml --report /workspace/scans/$(inputs.params.scansDir)/$)inputs.resources.docker-image.url)/$(cat /var/lib/containers/imageid.txt)/report.html $(inputs.params.pathToInputFile)']
+      args: ['-c', 'mkdir -p /workspace/scans/$(inputs.params.scansDir)/$(inputs.resources.docker-image.url)/$(cat /var/lib/containers/imageid.txt); echo "Scanning copy of image $(inputs.resources.docker-image.url) with image ID $(cat /var/lib/containers/imageid.txt) in /var/lib/containers/merged"; cd /var/lib/containers/merged; ls -la; $(inputs.params.command) /var/lib/containers/merged oval eval --results /workspace/scans/$(inputs.params.scansDir)/$(inputs.resources.docker-image.url)/$(cat /var/lib/containers/imageid.txt)/results.xml --report /workspace/scans/$(inputs.params.scansDir)/$(inputs.resources.docker-image.url)/$(cat /var/lib/containers/imageid.txt)/report.html $(inputs.params.pathToInputFile)']
       volumeMounts:
         - name: host-save-dir
           mountPath: /workspace/scans
         - name: varlibcontainers
           mountPath: /var/lib/containers
-        - name: scap-content
-          mountPath: /scap/content
   volumes:
-# The host directory to mount where the scansDir will be created and the the scan outputs will be saved to.
+    # The host directory to mount where the scansDir will be created and the the scan outputs will be saved to.
     - name: host-save-dir
       hostPath:
         path: /var/lib
     - name: varlibcontainers
       emptyDir: {}
-# User configurable location of other SCAP content to mount to /scap/content to make available to the scanner. Specify /scan/content/<filename> in the value of the pathToInputFile input parameter from the pipeline to use a file from this location.
-    - name: scap-content
-      hostPath:
-        path: /usr/share/xml/scap/ssg/content/
