Update pipeline name

--- a/pipelines/incubator/manual-pipeline-runs/manual-pipeline-run-template.yaml
+++ b/pipelines/incubator/manual-pipeline-runs/manual-pipeline-run-template.yaml
@@ -6,7 +6,7 @@ spec:
   serviceAccount: kabanero-operator
   timeout: "1h0m0s"
   pipelineRef:
-    name: <collection-name>-build-deploy-pipeline
+    name: <collection-name>-build-push-deploy-pipeline
   resources:
     - name: git-source
       resourceRef:
