--- a/pipelines/experimental/build-only-task.yaml
+++ b/pipelines/experimental/build-only-task.yaml
@@ -31,7 +31,7 @@ spec:
     - name: validate-collection-is-active
       securityContext:
         privileged: true
-      image: kabanero/validate-collection
+      image: kabanero/validate-collection:0.1.0
       command: ["/bin/bash"]
       args:
         - -c
