--- a/pipelines/incubator/deploy-task.yaml
+++ b/pipelines/incubator/deploy-task.yaml
@@ -39,7 +39,7 @@ spec:
     - name: YAMLFILE
       value: $(inputs.params.app-deploy-file-name)
   - name: deploy-image
-    image: kabanero/kabanero-utils
+    image: kabanero/kabanero-utils:0.3.0
     command: ['/bin/sh']
     args: ['-c', 'find /workspace/git-source -name ${YAMLFILE} -type f|xargs kubectl apply -f']
     env:
