Sync docker image file changes from collections

--- a/pipelines/incubator/build-task.yaml
+++ b/pipelines/incubator/build-task.yaml
@@ -89,7 +89,7 @@ spec:
     - name: validate-collection-is-active
       securityContext:
         privileged: true
-      image: kabanero/validate-collection
+      image: kabanero/validate-collection:0.1
       command: ["/bin/bash"]
       args:
         - -c
@@ -122,3 +122,4 @@ spec:
       secret:
         secretName: default-collection-image-registry-secret
         optional: true
+        
