--- a/pipelines/incubator/build-push-task.yaml
+++ b/pipelines/incubator/build-push-task.yaml
@@ -93,7 +93,7 @@ spec:
   - name: validate-collection-is-active
     securityContext:
       privileged: true
-    image: kabanero/validate-collection
+    image: kabanero/validate-collection:0.1
     command: ["/bin/bash"]
     args:
     - -c
@@ -134,3 +134,4 @@ spec:
     secret:
       secretName: default-collection-image-registry-secret
       optional: true
+      
