aadeshpa issue 132 use updated buildah container and move app-deploy.yaml from build task to deploy task

--- a/pipelines/incubator/build-push-deploy-pipeline.yaml
+++ b/pipelines/incubator/build-push-deploy-pipeline.yaml
@@ -24,6 +24,8 @@ spec:
       outputs:
       - name: docker-image
         resource: docker-image
+      - name: git-source
+        resource: git-source
   - name: image-scan-task
     taskRef:
       name: CollectionId-image-scan-task
@@ -42,5 +44,6 @@ spec:
       inputs:
       - name: git-source
         resource: git-source
+        from: [build-push-task]
       - name: docker-image
         resource: docker-image
