--- a/pipelines/common/pv.yaml
+++ b/pipelines/common/pv.yaml
@@ -1,12 +1,14 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: manual-pipeline-run-pvc
+  name: nfs-pv 
 spec:
   capacity:
-    storage: 5Gi
+    storage: 5Gi 
   accessModes:
-    - ReadWriteOnce
-  persistentVolumeReclaimPolicy: Recycle
-  hostPath:
-    path: /var/lib/manual-pipeline-run-pvc
+    - ReadWriteOnce 
+  persistentVolumeReclaimPolicy: Recycle 
+  nfs: 
+    path: /data
+    server: <nfs-server-ip-address> 
+    readOnly: false
