--- a/pipelines/incubator/build-push-task.yaml
+++ b/pipelines/incubator/build-push-task.yaml
@@ -19,11 +19,13 @@ spec:
     resources:
     - name: docker-image
       type: image
+    - name: git-source
+      type: git
   steps:
   - name: assemble-extract
     securityContext:
       privileged: true
-    image: appsody/appsody-buildah:0.2.1
+    image: appsody/appsody-buildah:0.5.0-buildah1.9.0
     command: ["/bin/bash"]
     args:
       - -c
@@ -61,7 +63,10 @@ spec:
              chmod 755 cert-creation.sh
              ./cert-creation.sh
         fi
-        /extract.sh
+        cd /workspace/$gitsource
+        appsody build -t $(outputs.resources.docker-image.url) --buildah --buildah-options "--format=docker"
+        echo "Copying the generated app-deploy.yaml file from input to the output to pass the file to the next task when this task is used in deploy pipeline"
+        cp app-deploy.yaml $(outputs.resources.git-source.path)
     env:
     - name: gitsource
       value: git-source
@@ -101,21 +106,10 @@ spec:
     env:
     - name: gitsource
       value: git-source
-  - name: build
-    securityContext:
-      privileged: true
-    image: appsody/appsody-buildah:0.2.1
-    command: ['buildah', 'bud', '--tls-verify=false', '--format=docker', '-f', '$(inputs.params.pathToDockerFile)', '-t', '$(outputs.resources.docker-image.url)', '$(inputs.params.pathToContext)']
-    env:
-    - name: gitsource
-      value: git-source
-    volumeMounts:
-    - mountPath: /var/lib/containers
-      name: varlibcontainers
   - name: push
     securityContext:
       privileged: true
-    image: appsody/appsody-buildah:0.2.1
+    image: appsody/appsody-buildah:0.5.0-buildah1.9.0
     command: ['buildah', 'push', '--tls-verify=false', '$(outputs.resources.docker-image.url)', 'docker://$(outputs.resources.docker-image.url)']
     env:
     - name: gitsource
