--- a/pipelines/incubator/build-task.yaml
+++ b/pipelines/incubator/build-task.yaml
@@ -15,11 +15,15 @@ spec:
         default: /workspace/extracted
       - name: appsody-yaml-file-path
         default: $HOME/.appsody/.appsody.yaml
+  outputs:
+    resources:
+    - name: git-source
+      type: git
   steps:
     - name: assemble-extract
       securityContext:
         privileged: true
-      image: appsody/appsody-buildah:0.2.1
+      image: appsody/appsody-buildah:0.5.0-buildah1.9.0
       command: ["/bin/bash"]
       args:
         - -c
@@ -57,7 +61,8 @@ spec:
                chmod 755 cert-creation.sh
                ./cert-creation.sh
           fi
-          /extract.sh
+          cd /workspace/$gitsource
+          appsody build -t $(outputs.resources.docker-image.url) --buildah --buildah-options "--format=docker"
       env:
         - name: gitsource
           value: git-source
@@ -94,17 +99,6 @@ spec:
       args:
         - -c
         - "/validate.sh"
-      env:
-        - name: gitsource
-          value: git-source
-      volumeMounts:
-        - mountPath: /var/lib/containers
-          name: varlibcontainers
-    - name: build
-      securityContext:
-        privileged: true
-      image: appsody/appsody-buildah:0.2.1
-      command: ['buildah', 'bud', '--tls-verify=false', '--format=docker', '-f', '$(inputs.params.pathToDockerFile)', '$(inputs.params.pathToContext)']
       env:
         - name: gitsource
           value: git-source
