--- a/pipelines/incubator/build-pipeline.yaml
+++ b/pipelines/incubator/build-pipeline.yaml
@@ -15,3 +15,6 @@ spec:
         inputs:
         - name: git-source
           resource: git-source
+        outputs:
+        - name: docker-image
+          resource: docker-image
