aadeshpa fixed the build pipeline to add docker-image resource since webhook does not allow to apply task without adding the docker-image.

--- a/pipelines/incubator/manual-pipeline-runs/manual-build-pipeline-run-template.yaml
+++ b/pipelines/incubator/manual-pipeline-runs/manual-build-pipeline-run-template.yaml
@@ -11,3 +11,6 @@ spec:
     - name: git-source
       resourceRef:
         name: git-source
+    - name: docker-image
+      resourceRef:
+        name: docker-image
