--- a/pipelines/incubator/build-pipeline.yaml
+++ b/pipelines/incubator/build-pipeline.yaml
@@ -7,6 +7,8 @@ spec:
   resources:
     - name: git-source
       type: git
+    - name: docker-image
+      type: image
   tasks:
     - name: build-task
       taskRef:
