aadeshpa issue 132 merged build and deploy task
1. Updated all the buildah images to use new appsody-buildah image for kAppNav
2. Updated extract step with new `appsody build` that generates app-deploy.yaml for kAppNav
3. Merged the build and deploy task for build-push-deploy-task because we could not pass the app-deploy.yaml using `hostpath` yaml

--- a/pipelines/incubator/build-pipeline.yaml
+++ b/pipelines/incubator/build-pipeline.yaml
@@ -7,6 +7,8 @@ spec:
   resources:
     - name: git-source
       type: git
+    - name: docker-image
+      type: image
   tasks:
     - name: build-task
       taskRef:
@@ -15,3 +17,6 @@ spec:
         inputs:
         - name: git-source
           resource: git-source
+        outputs:
+        - name: docker-image
+          resource: docker-image
