--- a/pipelines/incubator/build-push-deploy-task.yaml
+++ b/pipelines/incubator/build-push-deploy-task.yaml
@@ -2,12 +2,14 @@
 apiVersion: tekton.dev/v1alpha1
 kind: Task
 metadata:
-  name: CollectionId-build-task
+  name: CollectionId-build-push-deploy-task
 spec:
   inputs:
     resources:
     - name: git-source
       type: git
+    - name: docker-image
+      type: image
     params:
     - name: pathToDockerFile
       default: /workspace/extracted/Dockerfile
@@ -15,10 +17,10 @@ spec:
       default: /workspace/extracted
     - name: appsody-yaml-file-path
       default: $HOME/.appsody/.appsody.yaml
-  outputs:
-    resources:
-    - name: docker-image
-      type: image
+    - name: repository-name
+      default: CollectionId
+    - name: app-deploy-file-name
+      default: app-deploy.yaml
   steps:
   - name: assemble-extract
     securityContext:
@@ -63,6 +65,8 @@ spec:
         fi
         cd /workspace/$gitsource
         appsody build -t $(outputs.resources.docker-image.url) --buildah --buildah-options "--format=docker"
+        echo "printing content of /workspace/git-source/${YAMLFILE}"
+        cat /workspace/git-source/${YAMLFILE}
     env:
     - name: gitsource
       value: git-source
@@ -102,6 +106,43 @@ spec:
     env:
     - name: gitsource
       value: git-source
+  - name: push
+    securityContext:
+      privileged: true
+    image: appsody/appsody-buildah:0.5.0-buildah1.9.0
+    command: ['buildah', 'push', '--tls-verify=false', '$(outputs.resources.docker-image.url)', 'docker://$(outputs.resources.docker-image.url)']
+    env:
+    - name: gitsource
+      value: git-source
+    volumeMounts:
+    - mountPath: /var/lib/containers
+      name: varlibcontainers
+  - name: modify-app-deploy-yaml
+    image: registry.access.redhat.com/ubi8/ubi:8.1-277
+    command: ['/bin/bash']
+    args:
+    - -ce
+    - |
+      echo "Checking for app-deploy.yaml"
+      APP_DEPLOY_YAML=$(find /workspace/git-source -name ${YAMLFILE} -type f)
+      if [ -z "$APP_DEPLOY_YAML" ]; then
+        echo "ERROR: app-deploy.yaml not found in your project after the build task ran which should have generated it.  Please verify before running the pipeline."
+        exit 1
+      fi
+    env:
+    - name: REPO
+      value: $(inputs.params.repository-name)
+    - name: IMG
+      value: $(inputs.resources.docker-image.url)
+    - name: YAMLFILE
+      value: $(inputs.params.app-deploy-file-name)
+  - name: deploy-image
+    image: kabanero/kabanero-utils:0.3.0
+    command: ['/bin/sh']
+    args: ['-c', 'find /workspace/git-source -name ${YAMLFILE} -type f|xargs kubectl apply -f']
+    env:
+    - name: YAMLFILE
+      value: $(inputs.params.app-deploy-file-name)
   volumes:
   - name: varlibcontainers
     emptyDir: {}
