--- a/pipelines/incubator/build-push-task.yaml
+++ b/pipelines/incubator/build-push-task.yaml
@@ -23,7 +23,7 @@ spec:
   - name: assemble-extract
     securityContext:
       privileged: true
-    image: appsody/appsody-buildah:0.2.1
+    image: appsody/appsody-buildah:0.5.0-buildah1.9.0
     command: ["/bin/bash"]
     args:
       - -c
@@ -61,7 +61,8 @@ spec:
              chmod 755 cert-creation.sh
              ./cert-creation.sh
         fi
-        /extract.sh
+        cd /workspace/$gitsource
+        appsody build -t $(outputs.resources.docker-image.url) --buildah --buildah-options "--format=docker"
     env:
     - name: gitsource
       value: git-source
@@ -101,21 +102,10 @@ spec:
     env:
     - name: gitsource
       value: git-source
-  - name: build
-    securityContext:
-      privileged: true
-    image: appsody/appsody-buildah:0.2.1
-    command: ['buildah', 'bud', '--tls-verify=false', '--format=docker', '-f', '$(inputs.params.pathToDockerFile)', '-t', '$(outputs.resources.docker-image.url)', '$(inputs.params.pathToContext)']
-    env:
-    - name: gitsource
-      value: git-source
-    volumeMounts:
-    - mountPath: /var/lib/containers
-      name: varlibcontainers
   - name: push
     securityContext:
       privileged: true
-    image: appsody/appsody-buildah:0.2.1
+    image: appsody/appsody-buildah:0.5.0-buildah1.9.0
     command: ['buildah', 'push', '--tls-verify=false', '$(outputs.resources.docker-image.url)', 'docker://$(outputs.resources.docker-image.url)']
     env:
     - name: gitsource
