--- a/pipelines/incubator/build-push-task.yaml
+++ b/pipelines/incubator/build-push-task.yaml
@@ -20,7 +20,7 @@ spec:
     - name: docker-image
       type: image
   steps:
-  - name: assemble-extract
+  - name: build
     securityContext:
       privileged: true
     image: appsody/appsody-buildah:0.5.0-buildah1.9.0
