--- a/pipelines/incubator/build-push-task.yaml
+++ b/pipelines/incubator/build-push-task.yaml
@@ -15,6 +15,8 @@ spec:
       default: /workspace/extracted
     - name: appsody-yaml-file-path
       default: $HOME/.appsody/.appsody.yaml
+    - name: app-deploy-file-name
+      default: app-deploy.yaml
   outputs:
     resources:
     - name: docker-image
@@ -121,17 +123,6 @@ spec:
       mountPath: /config
     - name: secret-volume
       mountPath: /etc/secret-volume
-  - name: validate-collection-is-active
-    securityContext:
-      privileged: true
-    image: kabanero/validate-collection:0.1
-    command: ["/bin/bash"]
-    args:
-    - -c
-    - "/validate.sh"
-    env:
-    - name: gitsource
-      value: git-source
   - name: push
     securityContext:
       privileged: true
