--- a/pipelines/incubator/build-task.yaml
+++ b/pipelines/incubator/build-task.yaml
@@ -15,6 +15,8 @@ spec:
       default: /workspace/extracted
     - name: appsody-yaml-file-path
       default: $HOME/.appsody/.appsody.yaml
+    - name: app-deploy-file-name
+      default: app-deploy.yaml
   outputs:
     resources:
     - name: docker-image
