--- a/pipelines/incubator/build-push-deploy-pipeline.yaml
+++ b/pipelines/incubator/build-push-deploy-pipeline.yaml
@@ -21,6 +21,7 @@ spec:
       inputs:
       - name: git-source
         resource: git-source
+      outputs:
       - name: docker-image
         resource: docker-image
   - name: image-scan-task
