--- a/pipelines/incubator/build-push-deploy-task.yaml
+++ b/pipelines/incubator/build-push-deploy-task.yaml
@@ -9,8 +9,6 @@ spec:
     - name: git-source
       type: git
     params:
-    - name: pathToDockerFile
-      default: /workspace/extracted/Dockerfile
     - name: pathToContext
       default: /workspace/extracted
     - name: appsody-yaml-file-path
@@ -26,21 +24,6 @@ spec:
     - name: docker-image
       type: image
   steps:
-  - name: extract
-    securityContext:
-      privileged: true
-    image: appsody/appsody-buildah:0.5.3
-    command: ["/bin/bash"]
-    args:
-      - -c
-      - |
-        appsody extract --buildah --target-dir /workspace/$gitsource -v
-    env:
-    - name: gitsource
-      value: git-source
-    volumeMounts:
-    - mountPath: /var/lib/containers
-      name: varlibcontainers
   - name: validate-collection-is-active
     securityContext:
       privileged: true
@@ -129,8 +112,10 @@ spec:
   - name: deploy-image
     image: kabanero/kabanero-utils:0.3.0
     command: ['/bin/sh']
-    args: ['-c', 'find /workspace/git-source -name ${YAMLFILE} -type f|xargs kubectl apply -f']
+    args: ['-c', 'find /workspace/$gitsource -name ${YAMLFILE} -type f|xargs kubectl apply -f']
     env:
+    - name: gitsource
+      value: git-source
     - name: YAMLFILE
       value: $(inputs.params.app-deploy-file-name)
   volumes:
